--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,13 @@
+:root {
+  --light-color: #F7F7F7;
+  --dark-blue-color: #2F4368;
+  --yellow-color: #FAF76B;
+  --black-color: #293330;
+  --light-blue-color: #B4E6FC;
+  --green-color: #92DB25;
+  --gray-color: #C1C9D9;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,9 +18,102 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  position: relative;
+  color: var(--black-color);
+}
+
+button {
+  font-family: inherit;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+}
+
+.MainPage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.MainPage header {
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100vw;
+  color: white;
+}
+
+.MainPage header span {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 720px;
+  min-height: 70vh;
+  position: relative;
+  padding: 8px;
+}
+
+.MainPage header h1, p {
+  opacity: 0;
+  animation: fadein 2s forwards;
+}
+
+.MainPage header h1 {
+  font-size: 2.2em;
+}
+
+.MainPage header h1 b {
+  font-size: larger;
+}
+
+#decorate-img {
+  position: absolute;
+  bottom: 0;
+  right: -500px;
+  opacity: 0;
+  animation: slideLeft 2s forwards;
+}
+
+#main-background {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  display: block;
+}
+
+#Container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 25vh;
+  background-color: #F7F7F7;
+  width: 100vw;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 5vh;
+  width: 100vw;
+  text-align: center;
+  background-color: white;
+  margin-bottom: 0;
+}
+
+@keyframes slideLeft {
+  100% {  opacity: 1; right: -40px; }
+}
+
+@keyframes fadein {
+  100% {  opacity: 1; }
 }
